add TLPT_AZURE_SQL_USER to example

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ ORCA_ADLS_URL=yourstorageaccount.dfs.core.windows.net
 
 # Azure SQL Server URI
 TLPT_AZURE_SQL_URI=yoursever.database.windows.net
+TLPT_AZURE_SQL_USER=yourusername@yourdomain.ca
 
 # Azure Authentication Options - for local, do use Managed Identity
 # Control DefaultAzureCredential behavior (true/false, 1/0, yes/no, on/off)
